Fix for results div not showing properly in Safari
I'd used two fancy modern CSS features together (they're so convenient!); apparently they're both supported on Safari, but it seems perhaps in combination they're buggy?  This fix just uses a more old-fashioned approach which works in my tests on Hsiaolin's laptop :)

--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,7 @@ mark {
   gap: 1rem;
 }
 
-.search-drawer .results:has(.query:empty) {
+.search-drawer .results:not(.show) {
   display: none;
 }
 
